# twitterclone

./: .gitignore  README.md  pyproject.toml
authentication/: forms.py  urls.py  views.py
authentication/templates/authentication/: login.html  signup.html
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
notification/templates/notification/: notification_list.html
templates/: base.html  index.html
tweet/: models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_user.py
tweet/templates/tweet/: tweet_detail.html  tweet_form.html  tweet_list.html
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
twitteruser/templates/twitteruser/: profile.html
