[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "To use Python Django framework to build a small working model of Twitter where user can register themselves and tweet, they can be followed or unfollowed by other user, on following others, their tweet will appear in users tweets list, when any user @xyz user, the xyz user shall receive a notification under notification section. Once the notifications are read, the unread count should clear out etc."

license = "MIT"

authors = [
    "Shufyan Ghani Khan <skhan.lotus@gmail.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/Shufyan/twitterclone"
homepage = "https://github.com/Shufyan/twitterclone"

keywords = ['social-network', 'twitterclone']

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.7"
django-bootstrap4 = "1.1.1"
tomlkit = "0.5.11"
pylint = "2.4.4"

# Dependencies with extras
requests = { version = "2.24.0"}

[tool.poetry.dev-dependencies]
pytest = "5.4.3"